proper fix to extra spacing in the scrollable sidebar

--- a/src/less/components/nav.less
+++ b/src/less/components/nav.less
@@ -34,17 +34,16 @@
 	color: #868AB0;
 	padding-left: 0;
 	min-width: 360px;
-	min-height: 100vh;
-	max-height: 100vh;
+	height: 100vh;
 	overflow-x: hidden;
 	overflow-y: auto;
+
+	@mobile-top-bar-height: 50px;
 
 	@media (max-width: 639px) {
 		position: absolute;
 		width: 360px;
-		min-height: calc(100vh - 33px);
-		max-height: calc(100vh - 33px);
-		overflow: scroll;
+		height: calc(100vh - @mobile-top-bar-height);
 	}
 
 	// Scrollbar - Gecko (Firefox)
